; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_lookup_table.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_lookup_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.key = type { i32 }

@MAXGLYPHS = common dso_local global i32 0, align 4
@g_table = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.key*)* @lookup_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lookup_table(%struct.key* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.key*, align 8
  %4 = alloca i32, align 4
  store %struct.key* %0, %struct.key** %3, align 8
  %5 = load %struct.key*, %struct.key** %3, align 8
  %6 = call i32 @hashfunc(%struct.key* %5)
  %7 = load i32, i32* @MAXGLYPHS, align 4
  %8 = urem i32 %6, %7
  store i32 %8, i32* %4, align 4
  br label %9

9:                                                ; preds = %1, %31
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @g_table, align 8
  %11 = load i32, i32* %4, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %9
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* %2, align 4
  br label %36

20:                                               ; preds = %9
  %21 = load %struct.key*, %struct.key** %3, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @g_table, align 8
  %23 = load i32, i32* %4, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = call i32 @memcmp(%struct.key* %21, %struct.TYPE_3__* %26, i32 4)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %31, label %29

29:                                               ; preds = %20
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* %2, align 4
  br label %36

31:                                               ; preds = %20
  %32 = load i32, i32* %4, align 4
  %33 = add i32 %32, 1
  %34 = load i32, i32* @MAXGLYPHS, align 4
  %35 = urem i32 %33, %34
  store i32 %35, i32* %4, align 4
  br label %9

36:                                               ; preds = %29, %18
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @hashfunc(%struct.key*) #1

declare dso_local i32 @memcmp(%struct.key*, %struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
